Updated lsec logo + Lsec --> LSEC

--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,5 +1,5 @@
 <p class="pull-left">
-  <a href="{{ root_url }}/">Nebucom</a> | Powered by <a  target="_blank" href="http://www.sirris.be">Sirris</a>, <a target="_blank" href="http://www.agoria.be">Agoria</a>, <a  target="_blank" href="http://www.iminds.be">IMinds</a> and <a target="_blank" href="http://www.lsec.be">LSec</a>.
+  <a href="{{ root_url }}/">Nebucom</a> | Powered by <a  target="_blank" href="http://www.sirris.be">Sirris</a>, <a target="_blank" href="http://www.agoria.be">Agoria</a>, <a  target="_blank" href="http://www.iminds.be">IMinds</a> and <a target="_blank" href="http://www.lsec.be">LSEC</a>.
   - Copyright &copy; {{ site.time | date: "%Y" }}
 </p>
 <p class="pull-right">
