--- a/source/_includes/custom/footer_widgets.html
+++ b/source/_includes/custom/footer_widgets.html
@@ -16,7 +16,7 @@
     <ul class="recent_posts">
       <li><a href="/partners/agoria.html">Agoria</a></li>
       <li><a href="/partners/iminds.html">IMinds</a></li>
-      <li><a href="/partners/lsec.html">LSec</a></li>
+      <li><a href="/partners/lsec.html">LSEC</a></li>
       <li><a href="/partners/sirris.html">Sirris</a></li>
     </ul>
   </div>
