--- a/source/_includes/navigation.html
+++ b/source/_includes/navigation.html
@@ -14,7 +14,7 @@
         <ul class="dropdown-menu">
           <li><a href="/partners/agoria.html">Agoria</a></li>
           <li><a href="/partners/iminds.html">IMinds</a></li>
-          <li><a href="/partners/lsec.html">LSec</a></li>
+          <li><a href="/partners/lsec.html">LSEC</a></li>
           <li><a href="/partners/sirris.html">Sirris</a></li>
         </ul>
     </ul>
