Landing page boot camp

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -46,3 +46,5 @@ $navbarHeight: 60px;
   padding: (($navbarHeight - $elementHeight) / 2 - 1) 10px (($navbarHeight - $elementHeight) / 2 + 1);
   line-height: 19px;
 }
+
+float-right {float: right;}
