--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -47,4 +47,7 @@ $navbarHeight: 60px;
   line-height: 19px;
 }
 
-float-right {float: right;}
+.float-right {float: right;}
+
+.inline-picture {float:left; margin:25px 10px 5px 10px;}
+
