--- a/source/_includes/google_plus_one.html
+++ b/source/_includes/google_plus_one.html
@@ -6,7 +6,7 @@
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(script, s);
     })();
   </script>
-  <p style="display:none">
+  <p style="visibility: hidden">
   <a href="https://plus.google.com/111972125498658399610" rel="publisher">Google+</a>
 </p>
 {% endif %}
