Announcement for pricing bootcamp + subscribe via email

--- a/source/_includes/custom/asides/upcoming-events.html
+++ b/source/_includes/custom/asides/upcoming-events.html
@@ -6,3 +6,17 @@
     {% include event-home-page.html %}
   </div>
  {% endfor %}
+
+ <!-- Begin MailChimp Signup Form -->
+
+<div id="mc_embed_signup">
+<form action="http://sirris.us2.list-manage.com/subscribe/post?u=b8ac525f48e3c47dfefe339fb&amp;id=a6c15e5b4f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	<label for="mce-EMAIL">Keep me informed!</label>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_b8ac525f48e3c47dfefe339fb_a6c15e5b4f" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success"></div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
