--- a/source/_includes/navigation.html
+++ b/source/_includes/navigation.html
@@ -22,7 +22,7 @@
     <ul class="nav" data-subscription="rss{% if site.subscribe_email %} email{% endif %}">
       <li><a href="{{ site.subscribe_rss }}" rel="subscribe-rss" title="subscribe via RSS">RSS</a></li>
       {% if site.subscribe_email %}
-        <li><a href="{{ site.subscribe_email }}" rel="subscribe-email" title="subscribe via email">Email</a></li>
+        <li><a href="{{ site.subscribe_email }}" rel="subscribe-email" title="subscribe via email">Subscribe via Email</a></li>
       {% endif %}
     </ul>
       {% if site.simple_search %}
