mailchimp popup + trunced atom.xml

--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -20,5 +20,6 @@ single: true
   </div>
   {% include footer.html %}
   {% include after_footer.html %}
+  {% include mailchimp_popup.html %}
 </body>
 </html>
