--- a/source/_includes/mailchimp_popup.html
+++ b/source/_includes/mailchimp_popup.html
@@ -74,7 +74,7 @@
 <script type='text/javascript'>
 (function($) {
 window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';
-window.mc.showPopup = true;window.mc.delayPopup = 1000;if (mc.showPopup) mc.evalPopup();
+window.mc.showPopup = true;window.mc.delayPopup = 15*1000;if (mc.showPopup) mc.evalPopup();
 }(jQuery));
 var $mcj = jQuery.noConflict(true);
 </script>
